@@ -96,5 +96,6 @@
         <file>icons-png/cl_help.png</file>
         <file>icons-png/osd.png</file>
         <file>icons-png/angle.png</file>
+        <file>icons-png/warning.png</file>
     </qresource>
 </RCC>
